examples/cluster/vpc/v1beta1/route.yaml
apiVersion: vpc.nebius.upbound.io/v1beta1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: vpc/v1beta1/route
  labels:
    testing.upbound.io/example-name: vpc-v1beta1-route
  name: vpcv1route
spec:
  forProvider:
    name: vpcv1route
    destination:
      cidr: 0.0.0.0/0
    nextHop:
      defaultEgressGateway: true
    parentIdSelector:
      matchLabels:
        testing.upbound.io/example-name: vpc-v1beta1-route
